[package]
name = "sponsor-shields"
version = "0.1.0"
authors = ["Sculas <contact@sculas.xyz>"]
edition = "2021"

[dependencies]
http = "0.2"
reqwest = { version = "0.11", features = ["json"] }
serde = "1"
serde_json = "1.0"
hmac-sha256 = "1.1.6"
hex = "0.4.3"

[dependencies.vercel_lambda]
git = "https://github.com/hanabi1224/rust"
branch = "update_lambda_runtime_deps"

[[bin]]
name = "github"
path = "./github.rs"
